Fixing background image flicker issue. Adjusting styles.

--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
-body {
+body, html {
 	margin: 0;
+	height: 100%;
 }
 
 ul {
@@ -7,10 +8,28 @@ ul {
 	list-style: none;
 }
 
+body.home {
+	background-image: url(./images/main1.jpg);
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+.content-container.home {
+	position: absolute;
+	top: 100%;
+	background-color: #fff;
+}
+
 .main-image {
+	display: none;
+}
+
+
+/*.main-image {
 	width: 100%;
 	height: auto;
-}
+}*/
 
 .header-container {
 	position: absolute;
@@ -25,7 +44,6 @@ ul {
 .location-image {
 	width: 100%;
 	height: auto;
-	margin-top: 280px;
 }
 
 .centered-col {
@@ -128,7 +146,7 @@ ul {
 	flex-direction: row;
 	justify-content: center;
 	flex-wrap: wrap;
-	padding: 0 10%;
+	padding: 0 20%;
 	height: auto;
 	background-color: transparent;
 }
@@ -194,6 +212,19 @@ ul {
 }
 
 /* Location */
+
+body.location {
+	display: flex;
+	display: -webkit-flex;
+	flex-direction: column;
+	-webkit-flex-direction: column;
+}
+.location.header-container {
+	position: relative;
+	width: 100%;
+	background-color: transparent;
+}
+
 .location-container-first-row {
 	display: flex;
 	display: -webkit-flex;
